policies/opa/templates/k8sdisallowprivileged.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8sdisallowprivileged
  annotations:
    metadata.gatekeeper.sh/title: "Disallow Privileged Containers"
    metadata.gatekeeper.sh/version: "1.0.0"
    description: >-
      No container or initContainer may set securityContext.privileged: true.
      Pod Security Standards 'restricted' already enforces this; the OPA
      constraint is a belt-and-braces second check for namespaces that
      missed the PSS label.
spec:
  crd:
    spec:
      names:
        kind: K8sDisallowPrivileged
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8sdisallowprivileged

        violation[{"msg": msg}] {
          container := input.review.object.spec.containers[_]
          container.securityContext.privileged == true
          msg := sprintf("container '%v' is privileged", [container.name])
        }

        violation[{"msg": msg}] {
          container := input.review.object.spec.initContainers[_]
          container.securityContext.privileged == true
          msg := sprintf("initContainer '%v' is privileged", [container.name])
        }
